another JavaFX update